syntax = "proto3";

package calculator;

option java_package = "com.proto.calculator.proto";

message SumRequest {
    int32 first_number = 1;
    int32 second_number = 2;
}
message SumResponse {
    int32 sum_result =1;
}

message PrimeNumberDecompositionRequest {
    int32 number = 1;
}
message PrimeNumberDecompositionResponse{
    int32 prime_factor = 1;

}

message ComputeAverageRequest{
    int32 number =1;
}
message ComputeAverageResponse{
    double average =1;
}

message FindMaximumRequest{
    int32 number =1;
}
message FindMaximumResponse{
    int32 maximum =1;
}

message SquareRootRequest{
    int32 number=1;
}

message SquareRootResponse{
    double number_root=1;
}

service CalculatorService {

    rpc sum(SumRequest) returns (SumResponse){};

    rpc PrimeNumberDecomposition(PrimeNumberDecompositionRequest) returns (stream PrimeNumberDecompositionResponse){};
    //this rpc will throw an exception if the sent number is negative
    rpc ComputeAverage(stream ComputeAverageRequest) returns (ComputeAverageResponse){};

    rpc FindMaximum(stream FindMaximumRequest) returns (stream FindMaximumResponse){};

    //Error handling
    rpc SquareRoot(SquareRootRequest) returns (SquareRootResponse) {}


}